# agent-skills

./: .gitignore  README.md
skills/apple-human-interface-guidelines/: SKILL.md
skills/apple-human-interface-guidelines/reference/foundations/: accessibility.md  app-icons.md  branding-guidelines.md  color-guidelines.md  dark-mode.md  icons-guidelines.md  images-guidelines.md  immersive-experiences.md  inclusion-guidelines.md  layout-guidelines.md  materials-guidelines.md  motion-guidelines.md  privacy.md  right-to-left.md  sf-symbols.md  spatial-layout.md  typography-guidelines.md  writing-guidelines.md
skills/apple-human-interface-guidelines/reference/getting-started/: designing-for-games.md  designing-for-ios.md  designing-for-ipados.md  designing-for-macos.md  designing-for-tvos.md  designing-for-visionos.md  designing-for-watchos.md
skills/apple-human-interface-guidelines/reference/inputs/: action-button.md  apple-pencil-and-scribble.md  camera-control.md  digital-crown.md  focus-and-selection.md  game-controls.md  gestures.md  gyro-and-accelerometer.md  keyboards-guidelines.md  nearby-interactions.md  pointing-devices.md  remotes-tvos.md  visionos-eyes-input.md
skills/commit/: SKILL.md
skills/conventional-comments/: SKILL.md
skills/conventional-commits/: SKILL.md
skills/google-adk/: SKILL.md
skills/google-adk/reference/: home.md  safety.md
skills/humanizer/: SKILL.md
skills/pr-review/: SKILL.md
tooling/: apple_human_interface_guidelines.ipynb  pyproject.toml
tooling/google-adk/: clean_adk_docs.py  scrape_adk_docs.py
(+245 files in other folders)
