[project]
name = "tooling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "jupyter>=1.1.1",
    "markdownify>=1.2.2",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.3",
]
